# orchestra

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
metered-channel/: Cargo.toml  README.md
metered-channel/src/: bounded.rs  lib.rs  tests.rs  unbounded.rs
orchestra/: Cargo.toml
orchestra/benches/: bench_main.rs
orchestra/benches/benchmarks/: bench_boxed_subsystem_large.rs  bench_boxed_subsystem_u8.rs  bench_unboxed_subsystem_large.rs  bench_unboxed_subsystem_u8.rs  misc.rs  mod.rs
orchestra/examples/: backpressure.rs  dig.rs  duo.rs  misc.rs  solo.rs
orchestra/proc-macro/: Cargo.toml
orchestra/proc-macro/src/: graph.rs  impl_builder.rs  impl_channels_out.rs  impl_message_wrapper.rs  impl_orchestra.rs  impl_subsystem_ctx_sender.rs  lib.rs  orchestra.rs
orchestra/proc-macro/src/parse/: mod.rs  parse_cfg.rs  parse_orchestra_attr.rs  parse_orchestra_struct.rs
orchestra/proc-macro/tests/assets/: sample.dot
orchestra/src/: lib.rs
orchestra/tests/: subsystem_with_priority_channel_test.rs  subsystems_priority_channels_test.rs
orchestra/tests/ui/: ok-02-boxed.rs
