[package]
name = "orchestra-proc-macro"
description = "Generate the actor pattern connectivity graph from a single annotated struct definition - proc-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.105", features = ["full", "extra-traits"] }
quote = "1.0.20"
proc-macro2 = { version = "1.0.47", features = ["span-locations"] }
proc-macro-crate = "1.1.3"
expander = { version = "0.0.6", default-features = false }
petgraph = "0.6.0"
itertools = "0.10.3"

[dev-dependencies]
assert_matches = "1.5"
orchestra = { path = "../" }
thiserror = "1"
tracing = "0.1"

[features]
default = [] # enable "dotgraph" by default, blocked by <https://github.com/paritytech/ci_cd/issues/433>
# write the expanded version to a `orchestra-expansion.[a-f0-9]{10}.rs`
# in the `OUT_DIR` as defined by `cargo` for the `expander` crate.
expand = []
# Create directional message consuming / outgoing graph.
# Generates: `${OUT_DIR}/${orchestra|lowercase}-subsystem-messaging.dot`
dotgraph = []
# Creates a compile error if unconsumed messages are encountered
deny_unconsumed_messages = []
# Creates a compile error if unsent messages are encountered
deny_unsent_messages = []
